adicionando imagens ao projeto

--- a/ex001/index.html
+++ b/ex001/index.html
@@ -16,5 +16,10 @@
     da série principal dos jogos    
     </p>
     <hr>
+    <!--Iserindo imagem ultilizando a tag img-->
+    <p>Teste de imagem</p>
+    <img src="Imagens/paisagem.jpg" alt="paisagem">
+    <img src="Imagens/montanha.jpg" alt="montanha">
+
 </body>
 </html>
