correção do caminho da imagem

--- a/ex001/index.html
+++ b/ex001/index.html
@@ -18,8 +18,8 @@
     <hr>
     <!--Iserindo imagem ultilizando a tag img-->
     <p>Teste de imagem</p>
-    <img src="Imagens/paisagem.jpg" alt="paisagem">
-    <img src="Imagens/montanha.jpg" alt="montanha">
+    <img src="/imagens/paisagem.jpg" alt="paisagem">
+    <img src="/imagens/montanha.jpg" alt="montanha">
 
 </body>
 </html>
