Concertando erro no caminho da imagem e mudança nas imagens da pagina e adição do favicon

--- a/ex001/index.html
+++ b/ex001/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--Adição do favicon para pagina com a tag link sendo usada-->
+    <link rel="shortcut icon" href="../imagens/controle.ico" type="imagem/ico-x">
+
     <title>Monster Hunter Database</title>
 </head>
 <body>
@@ -18,8 +22,8 @@
     <hr>
     <!--Iserindo imagem ultilizando a tag img-->
     <p>Teste de imagem</p>
-    <img src="/imagens/paisagem.jpg" alt="paisagem">
-    <img src="/imagens/montanha.jpg" alt="montanha">
+    <img src="../imagens/tigrex.png" alt="tigrex">
+
 
 </body>
 </html>
