Adicionando hierarquia de titulo, marcadores, nova imagem e novos textos a pagina

--- a/ex001/index.html
+++ b/ex001/index.html
@@ -12,17 +12,27 @@
 <body>
     <!--titulo incial da pagina e parágrafos com informações iniciais da pagina -->
     <h1>Monster Hunter Database</h1>
-    <hr>
-    <p>Este será um site con informções do jogo 
-    monster hunter</p>
+      <hr>
+        <p>  Este será um site con informções do jogo 
+          monster hunter</p>
 
-    <p>Aqui teremos todos os dados de monstros<br>
-    da série principal dos jogos    
-    </p>
-    <hr>
-    <!--Iserindo imagem ultilizando a tag img-->
-    <p>Teste de imagem</p>
-    <img src="../imagens/tigrex.png" alt="tigrex">
+        <p>  Aqui teremos todos os dados de monstros<br>
+         da série principal dos jogos</p>
+      <hr>
+      <!--Iserindo imagem ultilizando a tag img-->
+      <h2>Tigrex informações</h2>
+        <img src="../imagens/tigrex.png" alt="tigrex">
+        <hr>
+        <!--Ultilizando hierarquia de titulos com as tag h1, h2 e h3-->
+        <h3>Fisiologia</h3>
+          <p>  Tigrex é um grande wyvern quadrúpede caracterizado por sua cabeça maciça e mandíbulas, possui uma marcante coloração listrada amarela/azul. A parte superior da cabeça<br> é inclinada com um par de orelhas em formato de chifres, e sua cauda segmentada que termina com uma protrusão espinhosa.</p>
+        <hr> 
+        <!--Marcando parte de destaque no texto usando a tag mark--> 
+        <h3>Habilidades</h3>
+          <p>  Como um wyvern quadrúpede, suas asas evoluíram para as pernas dianteiras, o que permite que ele funcione em velocidades muito rápidas. Embora possua um par de asas<br> adequadamente desenvolvidas, raramente é visto voar no sentido tradicional. Na verdade, é mais propenso a deslizar de local para local. Possui um poderoso conjunto de pulmões<br> que lhe dá a capacidade de produzir rugidos extremamente altos e concusivos que podem danificar fisicamente objetos próximos. Ao contrário de muitos outros monstros, Tigrex<br> não possui nenhum elemento. Em vez disso, depende da sua força bruta para derrubar oponentes. <mark>É possível prender o Tigrex na parede como mostra a imagem abaixo, ao desviar<br> de uma mordida e estando próximo a uma parede ele vai acertar a mordida na parede ao invés de simplesmente errar o ataque, isso dá a oportunidade de desferir vários ataques em<br> Tigrex ou até mesmo cortar sua calda.</mark></p>
+
+          <img src="../imagens/Tigrex_pedra.PNG" alt="Tigrex_pedra">
+          
 
 
 </body>
