--- a/ex001/armas.html
+++ b/ex001/armas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,37 +7,28 @@
     <!--Adição do favicon para pagina com a tag link sendo usada-->
     <link rel="shortcut icon" href="../imagens/controle.ico" type="imagem/ico-x">
 
-    <title>Monster Hunter Database Armas</title>
+    <title>Monster Hunter Database</title>
     <!--mudanças nas formas, fonts e imagens com a referencia do link a parte de style da pagina estilo.css-->
-    <link rel="stylesheet" type="text/css" href="../css/estilo.css">
-
+     <link rel="stylesheet" type="text/css" href="../css/estilo.css">
 </head>
 <body>
-    <!--Ultilizando a tag div para criar conteinrs para facilitar a formatação de partes da pagina--> 
-   <div class="container">
-    <!--ultilizando a tag pictura e source para deixar a imagens responsivas em qualquer dispositivo-->
-    <picture>
-     <source media="(max-width: 1050px)" srcset="../imagens/imagem_cabeçalho_G.jpg" type="image/jpeg">
-     <source media="(max-width: 600px)" srcset="../imagens/imagem_cabeçalho_M.jpg" type="image/jpeg">
-     <source media="(max-width: 300px)" srcset="../imagens/imagem_cabeçalho_P.jpg" type="image/jpeg">
-     <img src="../imagens/imagem_cabeçalho_G.jpg" alt="imagem_cabeçalho" style="width: 100%; height: auto">
-    </picture>
-   <div class="texto_imagem">
+ <!--Ultilizando a tag div para criar conteinrs para facilitar a formatação de partes da pagina-->  
     <!--titulo incial da pagina e parágrafos com informações iniciais e cabeçalho da pagina-->
     <header>
      <h1>Monster Hunter Database</h1>
-   </div>
-  </div>
-    <!--Fazendo uma lista ordenada do Menu da pagina-->
-    <div class="menu">
-     <ol>
-       <li>Inicio</li>
-       <li>Monstros</li>
-       <li>Jogos</li>
-       <li><a href="../ex001/mapas.html" target="_blank" rel="author">Mapas</a></li>
-       <li><a href="../ex001/armas.html" target="_self" rel="author">Armas</a></li>
-     </ol> 
-    </div>  
+     <!--Fazendo uma lista ordenada do Menu da pagina-->
+     <div id="menu">
+      <ul>
+        <li><a href="../ex001/index.html" target="_blank" rel="author">Inicio</a></li>
+        <li>Monstros</li>
+        <li>Jogos</li>
+        <li><a href="../ex001/mapas.html" target="_blank" rel="author">Mapas</a></li>
+        <li><a href="../ex001/armas.html" target="_self" rel="author">Armas</a></li>
+      </ul>
+     </div>
     </header>
+ <div class="principal">
+  
+</div>
 </body>
 </html>
