Inserindo conteúdo a pagina mapas com imagens e audios responsivo, introdução de video local com a tag video e do youtube com a tag iframe
correção de responsividade das imagens, layot, áudios da pagina  index, adição de novas imagens, áudios e da pasta vídeos com seus vídeos.

--- a/ex001/index.html
+++ b/ex001/index.html
@@ -36,53 +36,62 @@
       <section class="galeria">
         <div class="fotos">  
          <picture>
-           <source media="(max-width:360px)" srcset="../imagens/TigrexMHF2.png" type="image/png"> 
-           <img src="../imagens/TigrexMHF2.png" alt="Foto 1">
+           <source media="(max-width:360px)" srcset="../imagens/TigrexMHF2_P.png" type="image/png">
+           <source media="(max-width:520px)" srcset="../imagens/TigrexMHF2_M.png" type="image/png">  
+           <img src="../imagens/TigrexMHF2_G.png" alt="Foto 1">
          </picture> 
          <picture>
-           <source media="(max-width:360px)" srcset="../imagens/TigrexMHFU.png" type="image/png"> 
-           <img src="../imagens/TigrexMHFU.png" alt="Foto 2">
+           <source media="(max-width:360px)" srcset="../imagens/TigrexMHFU_P.png" type="image/png">
+           <source media="(max-width:520px)" srcset="../imagens/TigrexMHFU_M.png" type="image/png">  
+           <img src="../imagens/TigrexMHFU_G.png" alt="Foto 2">
          </picture> 
          <picture>
-           <source media="(max-width:360px)" srcset="../imagens/TigrexMHRISE.png" type="image/png"> 
-           <img src="../imagens/TigrexMHRISE.png" alt="Foto 3">
+           <source media="(max-width:360px)" srcset="../imagens/TigrexMHRISE_P.png" type="image/png">
+           <source media="(max-width:520px)" srcset="../imagens/TigrexMHRISE_M.png" type="image/png">  
+           <img src="../imagens/TigrexMHRISE_G.png" alt="Foto 3">
          </picture> 
          <picture>
-           <source media="(max-width:360px)" srcset="../imagens/TigrexMHW.png" type="image/png"> 
-           <img src="../imagens/TigrexMHW.png" alt="Foto 4">
+           <source media="(max-width:360px)" srcset="../imagens/TigrexMHW_P.png" type="image/png">
+           <source media="(max-width:520px)" srcset="../imagens/TigrexMHW_M.png" type="image/png"> 
+           <img src="../imagens/TigrexMHW_G.png" alt="Foto 4">
          </picture> 
          <picture>
-           <source media="(max-width:360px)" srcset="../imagens/TigrexMHF2.png" type="image/png"> 
-           <img src="../imagens/TigrexMHF2.png" alt="Foto 1">
+          <source media="(max-width:360px)" srcset="../imagens/TigrexMHF2_P.png" type="image/png">
+          <source media="(max-width:520px)" srcset="../imagens/TigrexMHF2_M.png" type="image/png">  
+          <img src="../imagens/TigrexMHF2.png_G" alt="Foto 1">
          </picture>
         </div>    
       </section>
-    <p>Tigrex é um grande wyvern quadrúpede caracterizado por sua cabeça<br> maciça e mandíbulas, possui uma marcante coloração listrada amarela<br>/azul. A parte superior da cabeça é inclinada com um par de orelhas<br> em formato de chifres, e sua cauda segmentada que termina com uma<br> protrusão espinhosa.</p>
+    <p>Tigrex é um grande wyvern quadrúpede caracterizado por sua cabeça maciça e mandíbulas, possui uma marcante coloração listrada amarela/azul. A parte superior da cabeça é inclinada com um par de orelhas em formato de chifres, e sua cauda segmentada que termina com uma protrusão espinhosa.
+    Um wyvern voador que mantém suas origens primitivas. Propenso à violência, possui uma ferocidade incrível graças aos seus quatro membros, garras e mandíbula. Habita uma vasta área, já foi avistado até caçando Popo nas montanhas.</p>
     <hr> 
-
       <!--Marcando parte de destaque no texto usando a tag mark--> 
       <div class="habilidades">
+       <h3>Habilidades</h3>
         <picture> 
-          <source media="(max-width:800px)" srcset="../imagens/Tigrex_pedra_G.PNG" type="image/PNG"> 
+          <source media="(max-width:200px)" srcset="../imagens/Tigrex_pedra_P.png" type="image/png">
           <source media="(max-width:500px)" srcset="../imagens/Tigrex_pedra_M.png" type="image/png"> 
-          <source media="(max-width:200px)" srcset="../imagens/Tigrex_pedra_P.png" type="image/png">     
-         <img src="../imagens/Tigrex_pedra_P.png" alt="Tigrex_pedra">
+          <source media="(max-width:800px)" srcset="../imagens/Tigrex_pedra_G.PNG" type="image/PNG">     
+         <img src="../imagens/Tigrex_pedra_M.png" alt="Tigrex_pedra">
        </picture> 
-      <h3>Habilidades</h3>
+      
       <p>  Como um wyvern quadrúpede, suas asas evoluíram para as pernas dianteiras, o que permite que ele funcione em velocidades muito rápidas. Embora possua um par de asas adequadamente desenvolvidas, raramente é visto voar no sentido tradicional. Na verdade, é mais propenso a deslizar de local para local. Possui um poderoso conjunto de pulmões que lhe dá a capacidade de produzir rugidos extremamente altos e concusivos  que podem danificar fisicamente objetos próximos. Ao contrário de muitos outros monstros, Tigrex não  possui nenhum elemento. Em vez disso, depende da sua força bruta para derrubar oponentes. <mark>É possível prender o Tigrex na parede, ao desviar de uma mordida e estando próximoa uma parede ele vai acertar a mordida na parede ao invés de simplesmente errar o ataque, isso dá a oportunidade de desferir vários ataques em Tigrex ou até mesmo cortar sua calda.</mark></p>
     </div>
     <hr>
-
     <div class=" comportamento">
+      <h3>Comportamento</h3>
       <picture>
-        <source media="(max-width: 800px)" srcset="../imagens/Tigrex_fraqueza_G.jpeg" type="image/jpeg">
-        <source media="(max-width: 480px)" srcset="../imagens/Tigrex_fraqueza_M.jpg" type="image/jpg">
         <source media="(max-width: 360px)" srcset="../imagens/Tigrex_fraqueza_P.jpg" type="image/jpg">
-        <img src="../imagens/Tigrex_fraqueza_M.jpg" alt="Tigrex fraquezas">
+        <source media="(max-width: 480px)" srcset="../imagens/Tigrex_fraqueza_M.jpg" type="image/jpg">
+        <source media="(max-width: 800px)" srcset="../imagens/Tigrex_fraqueza_G.jpeg" type="image/jpeg">
+        <img src="../imagens/Tigrex_fraqueza_G.jpeg" alt="Tigrex fraquezas">
       </picture>
-     <h3>Comportamento</h3>
+
      <p>O Tigrex geralmente tenta intimidar os possíveis atacantes com um rugido de cortar as orelhas. Se o combate se tornar intenso o suficiente, ele lavará sangue em seus membros anteriores, rosto e olhos, a fim de dar à sua pele um brilho vermelho-vivo como um esforço para intimidar ainda mais os atacantes. Tigrex tem sua maior  ponto fraco sendo na cabeça e os elementos que tem fraqueza são <mark>trovão</mark> e <mark>dragão</mark> a grande maioria das vezes nos jogos.</p>
   </div>
+  <hr>
+  <h3>Habitat</h3>
+  <p>O Tigrex pode ser encontrado em muitos ambientes diferentes, como o antigo Deserto, Montanhas Nevadas, Tundra, Estepe Ancestral, Floresta Primitiva, Via Marítima Congelada, Everwood, Santuário e Dunas. Como muitos wyverns, ele viajará por toda parte em busca de presas</p>
   <hr>
   <!--Importando audios usando a tag audio e  suas propriedades-->
   <div class="trilhaMonstro">
@@ -104,6 +113,21 @@
   </audio>
  </div>
   <hr>
+  <!--Inserindo video da gameplay na pagina ultilizando a tag video-->
+  <div class="gameplay">
+   <h3>Gameplay</h3>
+   <video width="500" poster="../imagens/thumb.jpeg" controls autoplay>
+    <source src="../videos/Tentando jogar sem hud.mp4" type="video/mp4">
+    <p>Seu navegador não suporta o video</p>  
+   </video>
+   <hr>
   </div>
+<div class="iframe">
+  <p> versão do youtube</p>
+  <!--Usando a tag iframe para chamar um video upado no youtube para a pagina-->
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/cLQzf9XtrR0?si=Vixr3VmEwZXJ5V9y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+ </div>
+  <hr>
+ </div>
 </body>
 </html>
