--- a/ex001/mapas.html
+++ b/ex001/mapas.html
@@ -28,6 +28,104 @@
      </div>
     </header>
  <div class="principal">
+ <!--Parte de mapas da pagina--> 
+   <h2>Mapas</h2>
+   <!--Conteiner foresthills contendo sua imagem, audio responsivos com descrição do mapa da imagem-->
+    <div class="foresthills">
+     <h3>Forest and Hills</h3>
+     <picture>
+      <source media="(max-width: 360px)" srcset="../imagens/Forest_hills_P.jpg" type="image/jpg">
+      <source media="(max-width: 520px)" srcset="../imagens/Forest_hills_M.jpg" type="image/jpg">
+      <source media="(max-width: 800px)" srcset="../imagens/Forest_hills_G.jpg" type="image/jpg">
+      <img src="../imagens/Forest_hills_G.jpg" alt="Forest hills">
+     </picture>
+
+     <audio preload="metadata" controls autoplay loop>
+      <source src="../áudios/Forest_and_Hills.mp3" type="audio/mp3">
+      <p>Audio não suportado <a href="../áudios/Forest_and_Hills.mp3" download="Forest_and_Hills.mp3" type="audio/mp3"></a></p>
+     </audio>
+     <p>A floresta e as colinas são um local recorrente na série Monster Hunter, introduzido no primeiro jogo e aparecendo em todas as sequências da 1ª e 2ª geração, antes de retornar mais recentemente em Monster Hunter Generations, conhecido como Verdant Hills.
+
+      É constituída, como o próprio nome indica, por florestas profundas e colinas altas, possuindo um clima globalmente temperado. Os herbívoros Aptonoth e Kelbi vagam pelas colinas, pois o local possui folhagem abundante, junto com matilhas de Velociprey e seu líder, Velocidrome. 
+      Embora esta zona possa parecer perfeita para caçadores novatos, não é totalmente isenta de perigos; Rathalos e Rathian são comumente vistos nidificando nos penhascos mais altos, enquanto Yian Kut-Ku, Gypceros, Yian Garuga e até mesmo Dragões Anciões como Chameleos também habitam este local.</p>
+    </div>
+    <hr>
+    <!--Conteiner jungle contendo sua imagem e audio responsivos com descrição do mapa da imagem-->
+    <div class="jungle">
+     <h3>Jungle</h3>
+     <picture>
+      <source media="(max-width: 360px)" srcset="../imagens/jungle_P.jpg" type="image/jpg">
+      <source media="(max-width: 520px)" srcset="../imagens/jungle_M.jpg" type="image/jpg">
+      <source media="(max-width: 800px)" srcset="../imagens/jungle_G.jpg" type="image/jpg">
+      <img src="../imagens/jungle_G.jpg" alt="Jungle">
+     </picture>
+
+     <audio preload="metadata" controls autoplay loop>
+      <source src="../áudios/Jungle.mp3" type="audio/mp3">
+      <p>Audio não suportado <a href="../áudios/Jungle.mp3" download="Jungle.mp3" type="audio/mp3"></a></p>
+     </audio>
+     <p>A Selva Velha, também conhecida como Floresta Tropical, é um local introduzido em Monster Hunter, caracterizado por vegetação densa que inibe a visibilidade, rios e cavernas frias cheias de água na altura dos tornozelos. 
+      Este ambiente hostil é o lar de muitos monstros, como Yian Kut-Ku, Khezu, Gypceros e Plesioth.
+      
+      Este local tem uma grande quantidade de locais para coleta de cogumelos e insetos, pode-se seguir os Mosswines enquanto eles tendem a seguir em direção aos locais de cogumelos.</p> 
+    </div>
+    <hr>
+    <!--Conteiner desert contendo sua imagem e audio responsivos com descrição do mapa da imagem-->
+    <div class="desert">
+     <h3>Desert</h3>
+     <picture>
+      <source media="(max-width: 360px)" srcset="../imagens/desert_P.jpg" type="image/jpg">
+      <source media="(max-width: 520px)" srcset="../imagens/desert_M.jpg" type="image/jpg">
+      <source media="(max-width: 800px)" srcset="../imagens/desert_G.jpg" type="image/jpg">
+      <img src="../imagens/desert_G.jpg" alt="Desert">
+     </picture> 
+
+     <audio preload="metadata" controls autoplay loop>
+      <source src="../áudios/Desert.mp3" type="audio/mp3">
+      <p>Audio não suportado <a href="../áudios/Desert.mp3" download="Desert.mp3" type="audio/mp3"></a></p>
+     </audio>
+     <p>Conhecido como o antigo deserto, este é um habitat implacável introduzido em Monster Hunter. Grande parte do mapa consiste em desfiladeiros altos e rochosos ou desertos baixos e arenosos. Possui vida vegetal esparsa, além de locais limitados de mineração e pesca. O calor extremo em algumas áreas exige o uso de uma bebida gelada, mas também existem áreas arenosas mais frescas, bem como uma caverna fria. A área reaparece em Monster Hunter 4 Ultimate, conhecida como Dunas.</p> 
+    </div>
+    <hr>
+    <!--Conteiner swamp contendo sua imagem e audio responsivos com descrição do mapa da imagem--> 
+    <div class="swamp">
+      <h3>Swamp</h3>
+      <picture>
+        <source media="(max-width: 360px)" srcset="../imagens/swamp_P.jpg" type="image/jpg">
+        <source media="(max-width: 520px)" srcset="../imagens/swamp_M.jpg" type="image/jpg">
+        <source media="(max-width: 800px)" srcset="../imagens/swamp_G.jpg" type="image/jpg">
+        <img src="../imagens/swamp_G.jpg" alt="Desert">
+       </picture>
+
+       <audio preload="metadata" controls autoplay loop>
+        <source src="../áudios/Swamp.mp3" type="audio/mp3">
+        <p>Audio não suportado <a href="../áudios/Swamp.mp3" download="Swamp.mp3" type="audio/mp3"></a></p>
+       </audio>
+      <p>O Velho Pântano apareceu pela primeira vez em Monster Hunter. É um grande pântano com inúmeras grutas e uma paisagem muito húmida. A neblina densa pode diminuir a visibilidade em algumas áreas. Em outras áreas, o solo é muito mole para estabelecer armadilhas de queda.
+
+        As numerosas cavernas, embora congeladas, guardam grandes aglomerados de belos cristais. Nas áreas do Noroeste, pode-se ouvir o trovão de uma tempestade distante. O Velho Pântano está repleto de nós de insetos, bem como numerosos locais de coleta de plantas e cogumelos. Na maioria das áreas deste ambiente, uma tonalidade azul é visível no céu e na neblina.</p>
+    </div>
+    <hr>
+    <!--Conteiner vulcano contendo sua imagem e audio responsivos com descrição do mapa da imagem-->
+    <div class="vulcano">
+      <h3>Vulcano</h3>
+      <picture>
+        <source media="(max-width: 360px)" srcset="../imagens/vulcao_P.jpg" type="image/jpg">
+        <source media="(max-width: 520px)" srcset="../imagens/vulcao_M.jpg" type="image/jpg">
+        <source media="(max-width: 800px)" srcset="../imagens/vulcao_G.jpg" type="image/jpg">
+        <img src="../imagens/vulcao_G.jpg" alt="Vulcano">
+       </picture>
+       
+       <audio preload="metadata" controls autoplay loop>
+        <source src="../áudios/Volcano.mp3" type="audio/mp3">
+        <p>Audio não suportado <a href="../áudios/Volcano.mp3" download="Volcano.mp3" type="audio/mp3"></a></p>
+       </audio>
+      <p>A antiga localização do Vulcão apareceu pela primeira vez em Monster Hunter. Consiste em um vulcão ativo e na área circundante, também é chamado de Cinturão Vulcânico. Os caçadores começam na base da montanha e podem viajar pelo centro fundido. Depois de emergirem das cavernas, eles podem começar a perigosa subida até o pico. O calor fulminante exige que os caçadores usem bebidas geladas se quiserem se aventurar nesta terra. Os caçadores também devem ter cuidado com rochas estranhas que podem explodir violentamente quando danificadas. Os danos podem ocorrer com impactos físicos ou se uma bomba de barril ou outro ataque explosivo (como uma bola de fogo de Rathalos ou uma onda de calor de Gravios) detonar perto da rocha.
+
+        Devido à pouca vegetação encontrada, o vulcão abriga apenas as criaturas mais vigorosas, incluindo os Basarios, Gravios, Azure Rathalos, Yian Kut-Ku, Iodrome e Shogun Ceanataur. A vegetação baixa também significa má coleta de ervas e insetos. Estas duas deficiências são, no entanto, superadas por uma abundância absolutamente esmagadora de minérios e minerais a serem extraídos. O Vulcão também é onde as Pólvoras são coletadas para a Guilda.</p>
+    </div>
+    <hr>
+
  </div>
 </body>
 </html>
