--- a/ex001/mapas.html
+++ b/ex001/mapas.html
@@ -6,27 +6,94 @@
 
     <!--Adição do favicon para pagina com a tag link sendo usada-->
     <link rel="shortcut icon" href="../imagens/controle.ico" type="imagem/ico-x">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>Monster Hunter Database</title>
     <!--mudanças nas formas, fonts e imagens com a referencia do link a parte de style da pagina estilo.css-->
      <link rel="stylesheet" type="text/css" href="../css/estilo.css">
-</head>
-<body>
- <!--Ultilizando a tag div para criar conteinrs para facilitar a formatação de partes da pagina-->  
-    <!--titulo incial da pagina e parágrafos com informações iniciais e cabeçalho da pagina-->
-    <header>
-     <h1>Monster Hunter Database</h1>
-     <!--Fazendo uma lista ordenada do Menu da pagina-->
-     <div id="menu">
-      <ul>
-        <li><a href="../ex001/index.html" target="_blank" rel="author">Inicio</a></li>
-        <li>Monstros</li>
-        <li>Jogos</li>
-        <li><a href="../ex001/mapas.html" target="_self" rel="author">Mapas</a></li>
-        <li><a href="../ex001/armas.html" target="_blank" rel="author">Armas</a></li>
-      </ul>
-     </div>
-    </header>
+     <link rel="stylesheet" type="text/css" href="../css/mapas.css">
+     <link rel="stylesheet" type="text/css" href="../css/menu.css">
+    </head>
+    <body>   
+     <!--Ultilizando a tag div para criar conteinrs para facilitar a formatação de partes da pagina-->  
+        <!--titulo incial da pagina e parágrafos com informações iniciais e cabeçalho da pagina-->
+        <header>    
+         <!--Menu da pagina da pagina ultilizando lista desordenada e span para manipulacao  do itens do menu-->
+         <nav id="sidebar">   
+            <div id="menu">
+              <h1>Monster Hunter Freedom Unite Database</h1>
+              <ul id="menu_itens">
+               <li class="menu-item"><a href="../ex001/index.html" target="_blank" rel="author">
+                 <i class="fa-solid fa-house"></i>
+                   <span class="item-descricao">
+                     Inicio
+                   </span>
+                  </a>
+               </li>
+               <li class="menu-item"><a href="#" target="_blank" rel="author">
+                 <i class="fa-solid fa-book"></i>
+                   <span class="item-descricao">
+                     Monstros
+                   </span>
+                  </a>
+               </li>
+               <li class="menu-item"><a href="#" target="_self" rel="author">
+                <i class="fa-solid fa-book-open"></i>
+                  <span class="item-descricao">
+                    Quests
+                  </span>
+                 </a>
+              </li>
+               <li class="menu-item"><a href="../ex001/armas.html" target="_blank" rel="author">
+                 <i class="fa-solid fa-gavel"></i>
+                   <span class="item-descricao">
+                     Armas
+                   </span>
+                  </a>
+               </li>
+               <li class="menu-item"><a href="#" target="_blank" rel="author">
+                 <i class="fa-solid fa-shield-halved"></i>
+                   <span class="item-descricao">
+                     Armaduras
+                   </span>
+                  </a>
+               </li>
+               <li class="menu-item"><a href="#" target="_blank" rel="author">
+                 <i class="fa-solid fa-flask"></i>
+                   <span class="item-descricao">
+                     Itens
+                   </span>
+                  </a>
+               </li>
+               <li class="menu-item"><a href="#" target="_self" rel="author">
+                <i class="fa-solid fa-star-of-life"></i>
+                  <span class="item-descricao">
+                    Skills
+                  </span>
+                 </a>
+              </li> 
+               <li class="menu-item"><a href="../ex001/mapas.html" target="_self" rel="author">
+                 <i class="fa-solid fa-map"></i>
+                   <span class="item-descricao">
+                     Mapas
+                   </span>
+                  </a>
+               </li>     
+               <li class="menu-item"><a href="#" target="_blank" rel="author">
+                 <i class="fa-solid fa-gem"></i>
+                   <span class="item-descricao">
+                     Decorações
+                   </span>
+                  </a>
+               </li>
+             </ul>
+            <!--botao usando a tag button para o icone que vai abrir e fechar o sidebar--> 
+           <button id="abri_btn">
+             <i id="abri_btn_icon" class="fa-solid fa-chevron-right"></i>
+           </button>
+          </div>
+        </nav>
+        </header>
  <div class="principal">
  <!--Parte de mapas da pagina--> 
    <h2>Mapas</h2>
@@ -127,5 +194,7 @@
     <hr>
 
  </div>
+  <!--chamada do script para o sidebar funcionar-->
+  <script src="../scripts/script.js"></script>
 </body>
 </html>
